MacViews: Fix embedded RWHVMac input routing

The method RenderWidgetHostViewMac::GetOffsetFromRootSurface is to be
used to indicate where the view is in its root ui::Compositor. It used
to be that the two were always aligned, but now they can be offset.

Bug: 846018, 	840173
Change-Id: Id3f761d56c75ebd33b75c40c05d46a84b485d162
Reviewed-on: https://chromium-review.googlesource.com/1070883
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#561389}
Former-commit-id: 4df0ff8ab3aa1317593369a237a5e0fdff817803